testsuite/tests/indexed-types/should_fail/T13571a.hs
{-# LANGUAGE TypeFamilies #-}

module T13571a where

import Data.Kind

type family G a = (r :: Type)
