testsuite/tests/indexed-types/should_fail/T13571a.stderr

T13571a.hs:7:1: error:
    • Illegal result type variable (r :: Type) for ‘G’
        Enable TypeFamilyDependencies to allow result variable names
    • In the type family declaration for ‘G’
